samples/_failures_safe/1761404249_5e824d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f03b4ebf.c: In function ‘main’:
./samples/SAFE/__tmp_f03b4ebf.c:159:9: error: expected expression at end of input
  159 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_f03b4ebf.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f03b4ebf.c:159:9: error: expected declaration or statement at end of input
